[gd_scene load_steps=8 format=3 uid="uid://dx6lip8xo8hjf"]

[ext_resource type="Texture2D" uid="uid://dt2w2qjpdm5ha" path="res://assets/monochrome_tilemap_transparent_packed.png" id="1_6bl3p"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_fkbvk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_st7ac"]
atlas = ExtResource("1_6bl3p")
region = Rect2(16, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p27h8"]
atlas = ExtResource("1_6bl3p")
region = Rect2(32, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_clkew"]
atlas = ExtResource("1_6bl3p")
region = Rect2(64, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yglp8"]
atlas = ExtResource("1_6bl3p")
region = Rect2(48, 288, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_253nx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_st7ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p27h8")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clkew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yglp8")
}],
"loop": true,
"name": &"throwing",
"speed": 5.0
}]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_fkbvk")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-7, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_253nx")
animation = &"throwing"
autoplay = "moving"
frame_progress = 0.9574

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
